<resources>
	
	<string name="required">Valorizzare il campo</string>
	
	<!-- region HINT -->
	<string name="name_hint">Nome</string>
	<string name="surname_hint">Cognome</string>
	<string name="email_hint">Email</string>
	<string name="old_password_hint">Vecchia password</string>
	<string name="password_hint">Password</string>
	<string name="confirm_password_hint">Conferma password</string>
	<string name="forgot_password_hint">Password dimenticata?</string>
	<string name="signup_login_hint">Hai già un account? Accedi</string>
	<string name="login_signup_hint">Non hai un account? Registrati</string>
	<string name="code_hint">Codice</string>
	<string name="title_hint">Titolo</string>
	<string name="description_hint">Descrizione</string>
	<string name="cfu_hint">CFU</string>
	<string name="start_time_hint">Inizio orario prenotazioni</string>
	<string name="end_time_hint">Fine orario prenotazioni</string>
	<string name="days_hint">Giorni prenotazioni</string>
	<!-- endregion -->
	
	<!-- region ERROR -->
	<string name="user_error">Le credenziali risultano errate</string>
	<string name="email_error">Inserire l\'email</string>
	<string name="email_validity_errore">Inserire un\'email valida</string>
	<string name="email_in_db_error">Email già registrata</string>
	<string name="email_not_in_db_error">L\'email non risulta registrata</string>
	<string name="generic_error">Errore generico</string>
	<string name="password_error">Inserire la password</string>
	<string name="name_error">Inserire il nome</string>
	<string name="surname_error">Inserire il cognome</string>
	<string name="password_validity_error">Inserire una password valida</string>
	<string name="password_confirm_error">Le due password non corrispondono</string>
	<string name="old_password_error">La vecchia password non corrisponde</string>
	<string name="max_cfu_error">I CFU superano la soglia massima</string>
	<string name="reservation_error">Corso non eliminabile, alcuni studenti hanno già inserito una prenotazione</string>
	<string name="disponibility_error">Corso non eliminabile, alcuni docenti hanno già inserito una disponibilità</string>
	<!-- endregion My Region -->
	
	<!-- region EVENT -->
	<string name="logout_done">Logout correttamente effettuato</string>
	<string name="login_done">Bentornato!</string>
	<string name="register_done">Benvenuto!</string>
	<string name="create_done">Oggetto creato</string>
	<string name="edit_done">Modifica effettuata</string>
	<string name="delete_done">Oggetto eliminato</string>
	<string name="password_changed">Password modificata</string>
	<string name="need_registration">Operazione non consentita. Obbligatoria la registrazione</string>
	<!-- endregion -->
	
	<!-- region DASHBOARD -->
	<string name="course_kpi">Totale corsi</string>
	<string name="teacher_kpi">Totale docenti</string>
	<!-- endregion -->
	
	<!-- region MENU -->
	<string name="dashboard_menu">Dashboard</string>
	<string name="course_menu">Corsi</string>
	<string name="teacher_menu">Docenti</string>
	<string name="disponibility_menu">Disponibilità</string>
	<string name="user_menu">Utenti registrati</string>
	<string name="calendar_menu">Calendario</string>
	<string name="profile_menu">Profilo personale</string>
	<string name="catalogue_menu">Catalogo</string>
	<string name="reservation_menu">Prenotazioni</string>
	<string name="application_setting_menu">Impostazioni applicazione</string>
	<string name="logout_menu">Logout</string>
	<string name="login_menu">Login</string>
	<!-- endregion -->
	
	<!-- region PAGE TITLE -->
	<string name="app_name">Gestione corsi</string>
	<string name="login_page">Login</string>
	<string name="register_page">Registrati</string>
	<string name="forgot_page">Recupera password</string>
	<string name="dashboard_page">Dashboard</string>
	<string name="catalogue_page">Catalogo</string>
	<string name="reservation_page">Prenotazioni</string>
	<string name="teacher_page">Docenti</string>
	<string name="disponibility_page">Disponibilità</string>
	<string name="course_page">Corsi</string>
	<string name="user_page">Utenti</string>
	<string name="profile_page">Profilo personale</string>
	<string name="password_page">Modifica password</string>
	<string name="application_setting_page">Impostazioni applicazione</string>
	<!-- endregion -->
	
	<string name="no_result">Nessun risultato</string>
	<string name="no_disponibility">Nessuna disponibilità</string>
	<string name="no_reservation">Nessuna prenotazione</string>
	
	<!-- region TEACHER -->
	<string name="teacher_new">Creazione docente</string>
	<string name="teacher_detail">Dettaglio docente</string>
	<string name="teacher_edit">Modifica docente</string>
	<string name="teacher_name">Nome</string>
	<string name="teacher_surname">Cognome</string>
	<string name="teacher_email">Email</string>
	<!-- endregion -->
	
	<!-- region DISPONIBILITY -->
	<string name="disponibility_detail">Dettaglio disponibilità</string>
	<string name="disponibility_edit">Modifica disponibilità</string>
	<string name="disponibility_date">Data</string>
	<string name="disponibility_slot">Slot</string>
	<string name="disponibility_course">Corso</string>
	<!-- endregion -->
	
	<!-- region COURSE -->
	<string name="course_new">Creazione corso</string>
	<string name="course_detail">Dettaglio corso</string>
	<string name="course_edit">Modifica corso</string>
	<string name="course_code">Codice</string>
	<string name="course_title">Titolo</string>
	<string name="course_description">Descrizione</string>
	<string name="course_cfu">CFU</string>
	<!-- endregion -->
	
	<!-- region CATALOGUE -->
	<string name="filter_available">Filtri disponibili</string>
	<!-- endregion -->
	
	<!-- region RESERVATION -->
	<string name="reservation_detail">Dettaglio prenotazione</string>
	<string name="course_title_course">Titolo corso</string>
	<string name="teacher_name_teacher">Docente</string>
	<!-- endregion -->
	
	<!-- region USER -->
	<string name="user_new">Creazione utente</string>
	<string name="user_detail">Dettaglio utente</string>
	<string name="user_edit">Modifica utente</string>
	<string name="user_name">Nome</string>
	<string name="user_surname">Cognome</string>
	<string name="user_mail">Mail</string>
	<!-- endregion -->
	
	<!-- region USER TYPE -->
	<string name="user_type_student">Studente</string>
	<string name="user_type_teacher">Docente</string>
	<string name="user_type_admin">Amministratore</string>
	<!-- endregion -->
	
	<!-- region BUTTON -->
	<string name="login_btn">Login</string>
	<string name="register_btn">Registrati</string>
	<string name="verify_btn">Verifica</string>
	<string name="change_pw_btn">Modifica password</string>
	<string name="create_btn">Crea</string>
	<string name="edit_btn">Modifica</string>
	<string name="save_btn">Salva</string>
	<string name="delete_btn">Elimina</string>
	<string name="confirm_btn">Conferma</string>
	<string name="apply_btn">Applica</string>
	<string name="reset_btn">Reset</string>
	<!-- endregion -->
	
	<!-- region DAYS -->
	<string name="l_days">L</string>
	<string name="m_days">M</string>
	<string name="g_days">G</string>
	<string name="v_days">V</string>
	<string name="s_days">S</string>
	<string name="d_days">D</string>
	<!-- endregion -->
</resources>