<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        style="@style/parent">

    <RelativeLayout
        style="@style/parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:weightSum="12"
            android:baselineAligned="false">

            <LinearLayout
                style="@style/parent"
                android:background="@drawable/login_shape_bk"
                android:orientation="vertical"
                android:layout_weight="3">

                <ImageView
                    style="@style/parent"
                    android:background="@drawable/ic_login_bk"
                    android:contentDescription="@string/layout_content_description"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp">


            <TextView
                style="@style/headerText"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:layout_marginTop="40dp"/>
            <androidx.cardview.widget.CardView
                style="@style/loginCard"
                app:cardCornerRadius="@dimen/loginCardRadius"
                android:elevation="5dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:layout_marginBottom="@dimen/loginViewsMargin"
                android:background="@color/whiteCardColor">
        
        
                <LinearLayout
                    style="@style/linearParent"
                    android:layout_gravity="center"
                    android:padding="@dimen/loginViewsMargin">
            
                    <TextView
                        style="@style/headerTextPrimary"
                        android:text="@string/login_page"
                        android:layout_marginTop="@dimen/loginViewsMargin"/>
            
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:id="@+id/textInputEmail"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/modifiedEditText"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:hint="@string/email_hint"/>
                    </com.google.android.material.textfield.TextInputLayout>
            
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:id="@+id/textInputPassword"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/modifiedEditText"
                            android:hint="@string/password_hint"
                            android:maxLines="1"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>
            
                    <TextView
                        android:id="@+id/href_forgot_password"
                        style="@style/viewParent"
                        android:text="@string/forgot_password_hint"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/TextSize_12"
                        android:layout_gravity="end"
                        android:layout_marginTop="10dp"/>
            
                    <Button
                        android:id="@+id/login_btn"
                        style="@style/loginButton"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="@string/login_btn"
                        app:backgroundTint="@color/colorAccent" />
            
                    <TextView
                        android:id="@+id/href_register"
                        style="@style/parent"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/primaryTextColor"
                        android:text="@string/login_signup_hint"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:gravity="center_horizontal" />
        
        
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>